<resources>
    <string name="app_name">A-ServiceR</string>
    <string name="logo_app_description">The logo of A-Service app</string>
    <string name="author_splash">Developed by Lázaro Guillermo Pérez Montoto\nfor ATLAS ROMERO S.L.U.</string>
    <string name="welcome_aservice">Welcom to A-Service!</string>
    <string name="login_to_start">Please, login to get started</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="start">Start</string>
    <string name="empresas">Companies</string>
    <string name="icon_empresa_description">Company icon</string>
    <string name="icon_contacto_descripcion">Contact icon</string>
    <string name="vitrinas">Cupboards</string>
    <string name="label_tipo">Type:</string>
    <string name="label_longitud">Length:</string>
    <string name="label_guillotina">Guillotine:</string>
    <string name="label_referencia">Reference:</string>
    <string name="label_inventario">Inventary:</string>
    <string name="label_anho">Year:</string>
    <string name="label_contacto">Contact:</string>
    <string name="icon_contact_phone_description">Icon of contact phone</string>
    <string name="icon_contact_mail_description">Icon of contact mail</string>
    <string name="icon_add_description">Icon for add an element to the list</string>
    <string name="label_empresa">Company:</string>
    <string name="company_name">Conmpany Name</string>
    <string name="company_address">Company Address</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_telef">Contact Phone</string>
    <string name="contact_correo">Contact Email</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="del">Del</string>
    <string name="update">Update</string>
    <string name="upd">Upd</string>
    <string name="label_vitrina">Cupboard:</string>
    <string name="label_fabricante">Manufacturer:</string>
    <string name="new_manufacturer_name">New manufacturer name</string>
    <string name="label_contrato">Contract:</string>
    <string name="label_mantenimientos">Maintenances:</string>
    <string name="label_tecnico">Technician:</string>
    <string name="segun_din">According to\nDIN12924</string>
    <string name="segun_en">According to\nEN14175</string>
    <string name="label_ctrl_digital">Digital controller operation:</string>
    <string name="label_sistem_extraccion">Extraction system (Visual inspection):</string>
    <string name="label_proteccion_superficie">Surface protection:</string>
    <string name="label_junta_vitrina_tablero">Cabinet/tabletop gaskets:</string>
    <string name="label_fijacion_piezas_rigidas">Correct fixing of rigid parts:</string>
    <string name="label_funcionamiento_guillotina">Guillotine operation:</string>
    <string name="label_estado_general_guillotina">General condition of the guillotine:</string>
    <string name="label_unidad_newton">N</string>
    <string name="label_fuerza_desplaza_guillotina">Guillotine displacement force:</string>
    <string name="label_control_presencia">Presence control:</string>
    <string name="label_autoproteccion">Autoprotect:</string>
    <string name="label_func_grifos_monored">Taps and monoreductors operation:</string>
    <string name="label_evaluacion">Final evaluation:</string>
    <string name="no">No</string>
    <string name="si">Yes</string>
    <string name="label_acuerdo_normas_regulaciones">The equipment is in accordance with the norms and standard regulations:</string>
    <string name="label_necesario_reparacion">For safety reasons it is necessary to repair the equipment:</string>
    <string name="label_comentarios">Comments:</string>
    <string name="mantenimiento">Mantenance</string>
    <string name="label_fecha">Date:</string>
    <string name="label_volumen_extraccion_real">Real extraction volume:</string>
    <string name="puesta_marcha">Start up</string>
    <string name="label_unidad_volumen_extraccion" translatable="false">m\u00B3/h</string>
    <string name="label_mediciones">Extraction volume measurements:</string>
    <string name="label_valor1">Value 1:</string>
    <string name="label_valor2">Value 2:</string>
    <string name="label_valor3">Value 3:</string>
    <string name="label_valor4">Value 4:</string>
    <string name="label_valor5">Value 5:</string>
    <string name="label_valor6">Value 6:</string>
    <string name="label_valor7">Value 7:</string>
    <string name="label_valor8">Value 8:</string>
    <string name="label_valor9">Value 9:</string>
    <string name="label_valor_medio">Average:</string>
    <string name="error_requerido_numero_decimal">Value %1$d has to be decimal</string>
    <string name="title_form_forgot_password">Please enter your details</string>
    <string name="full_name">Full name</string>
    <string name="null_user">User cannot be null or empty</string>
    <string name="email_required">An email is required</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="incorrect_user_or_password">Incorrect username or password</string>
    <string name="email_canceled">The email send was canceled</string>
    <string name="email_subject_forgot_password">I forgot the password</string>
    <string name="email_text_forgot_password">User: %1$s \nName: %2$s \nEmail: %3$s</string>
    <string name="email">Email</string>
    <string name="show_pdf_report">Show pdf report</string>
    <string name="send_pdf_report">Send pdf report</string>
    <string name="title_pin">Pin</string>
    <string name="message_supervisor_pin">You need a supervisor authorization</string>
    <string name="hint_supervisor_pin">Supervisor pin</string>
    <string name="message_alert_delete">Are you sure you want to delete %1$s?</string>
    <string name="close_app">Close app</string>
    <string name="the_company">the company</string>
    <string name="the_cupboard">the cupboard</string>
    <string name="the_maintenance">the maintenance</string>
    <string name="logout">Logout</string>
    <string name="message_logut">Are your sure you want to close the app?</string>
    <string name="lux">lux</string>
    <string name="dba">dBA</string>
    <string name="label_valor_light">Ilumination:</string>
    <string name="label_valor_sound">Sound:</string>
    <string name="measurement_instruments_used">Measurement instruments used</string>
    <string name="elipse_button">···</string>
    <string name="export_database">Export Database</string>
    <string name="import_database">Import Database</string>

</resources>