<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_baseline_close_app_24"
        android:title="@string/close_app"
        android:orderInCategory="10"
        android:titleCondensed="X"
        app:showAsAction="always"/>
    <item
        android:id="@+id/export_db"
        android:title="@string/export_database"
        android:orderInCategory="10"
        android:titleCondensed="Exp" />
    <item
        android:id="@+id/import_db"
        android:icon="@drawable/ic_baseline_close_app_24"
        android:title="@string/import_database"
        android:orderInCategory="10"
        android:titleCondensed="Imp" />

</menu>